# DesignPatterns

./: CMakeLists.txt  Readme.md
googletest/: CMakeCache.txt
include/: Logger.h  common.h
src/: AbstractFactory.cpp  AbstractFactory.h  Adapter.cpp  Adapter.h  Bridge.cpp  Bridge.h  Command.cpp  Command.h  Decorator.cpp  Decorator.h  Facade.cpp  Facade.h  FactoryMethod.cpp  FactoryMethod.h  Observer.cpp  Observer.h  Proxy.cpp  Proxy.h  Singleton.cpp  Singleton.h  Strategy.cpp  Strategy.h
tests/: testAbstractFactory.cpp  testAdapter.cpp  testBridge.cpp  testCommand.cpp  testDecorator.cpp  testFacade.cpp  testFactoryMethod.cpp  testObserver.cpp  testProxy.cpp  testRunner.cpp  testRunner.h  testSingleton.cpp  testStrategy.cpp
